--- a/matches.html
+++ b/matches.html
@@ -38,7 +38,7 @@
           Withness the culmination of skills, strategy and determination.<br />
           From thrilling fixtures,to hard-fought results, every match tells a
           story of courage and competitation.<br />
-          Stay updated with the latest scores, upcoming fixtures, and league
+          Stay updated with the latest scores, upcoming fixtures, and league.
         </p>
       </section>
 
